# henhouse

./: .dockerignore  .env  .env.make  .env.make.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.git-crypt/keys/default/0/: 2EB8105FFA57F8C96B8871335AFCF434660B96DF.gpg
yolo/: .gitignore  Makefile  main.py  pyproject.toml
yolo/Scale.workflow/Contents/: Info.plist  document.wflow
yolo/dataset/: autosplit_train.txt  autosplit_val.txt  data.yaml
yolo/dataset/project/: labels.cache  notes.json
yolo/dataset/project/labels/: 0126e891-Screenshot_2025-07-05_at_09.17.49.txt  0168e835-Screenshot_2025-07-09_at_21.35.32.txt  03bbe0b7-Screenshot_2025-07-09_at_21.34.48.txt  0716483c-Screenshot_2025-07-09_at_21.31.27.txt  074790a8-Screenshot_2025-07-09_at_21.34.07.txt  0bbc4c4a-Screenshot_2025-07-26_at_11.09.25.txt  0bf4fa1f-Screenshot_2025-07-09_at_21.35.55.txt  0ecff629-Screenshot_2025-07-09_at_21.34.56.txt  0f8788ca-Screenshot_2025-07-26_at_11.11.05.txt  1077327b-Screenshot_2025-07-09_at_21.35.16.txt  1244e71d-Screenshot_2025-07-26_at_11.09.12.txt  133c66eb-Screenshot_2025-07-22_at_08.21.51.txt  14354c2b-Screenshot_2025-07-22_at_08.22.16.txt  15aea34f-Screenshot_2025-07-09_at_21.37.25.txt  15d46ae2-Screenshot_2025-07-09_at_21.32.51.txt  168dad3f-Screenshot_2025-07-05_at_09.14.33.txt  1cdb07bd-Screenshot_2025-07-09_at_21.28.31.txt  1e55410e-Screenshot_2025-07-09_at_21.31.17.txt  1fc3d6ec-Screenshot_2025-07-05_at_09.19.06.txt  20e1e98f-Screenshot_2025-07-09_at_21.34.14.txt  (+95 more)
